--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : https://twitter.com/christensendkuk
 facebook:
   username               :
   app_id                 :
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  name             : "Heidi Christensen"
+  avatar           : "heidi1.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
