--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Heidi Christensen"
   avatar           : "heidi1.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Senior Lecturer at the University of Sheffield, UK"
   location         : "Location"
   employer         :
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
