--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Heidi Christensen"
-  avatar           : "heidi1.png"
+  avatar           : "profile.png"
   bio              : "Senior Lecturer at the University of Sheffield, UK"
   location         : "Location"
   employer         :
