--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : https://twitter.com/christensendkuk
+  username               : christensendkuk
 facebook:
   username               :
   app_id                 :
