--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Heidi Christensen"
 title_separator          : "-"
 name                     : &name "Heidi Christensen"
 description              : &description "Senior Lecturer at the University of Sheffield"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://heidi-christensen.github.io/website/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "heidi-christensen.github.io/website/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
