--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Heidi Christensenx"
+  name             : "Heidi Christensen"
   avatar           : "heidi5.png"
-  bio              : "Senior Lecturer at the University of Sheffield, UK"
+  bio              : "XSenior Lecturer at the University of Sheffield, UK"
   location         : "Location"
   employer         :
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
