--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-UK"
 title                    : "Heidi Christensen"
 title_separator          : "-"
 name                     : &name "Heidi Christensen"
-description              : &description "Senior Lecturer at the University of Sheffield"
+description              : &description "xSenior Lecturer at the University of Sheffield"
 url                      : https://heidi-christensen.github.io/website/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "heidi-christensen.github.io/website/"
