--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "xxHeidi Christensen"
+  name             : "Heidi Christensen"
   avatar           : "heidi5.png"
   bio              : "Senior Lecturer at the University of Sheffield, UK"
   location         : "Location"
