--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,21 @@
 # main links links
 main:
+  
+- title: "Research"
+    url: /research/
+  
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
+   
   - title: "Projects"
     url: /projects/
-        
+
+ - title: "Teaching"
+    url: /teaching/    
+ 
+  - title: "Team"
+    url: /team/    
+      
  # - title: "Blog Posts"
  #   url: /year-archive/
     
